janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__barf_backward_out_of_a_quoted_list.snap
---
source: src/editing/paredit/tests.rs
expression: "(x '(a| b))"
---
----- BEFORE ACTION
(x '(a b))
      ↑

----- AFTER ACTION: Barf backward
(x a '(b))
