janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__barf_backward_out_of_an_array.snap
---
source: src/editing/paredit/tests.rs
expression: "(f @[x|])"
---
----- BEFORE ACTION
(f @[x])
      ↑

----- AFTER ACTION: Barf backward
(f x @[])
