janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__barf_forward_drops_the_last_form.snap
---
source: src/editing/paredit/tests.rs
expression: (a b |c)
---
----- BEFORE ACTION
(a b c)
     ↑

----- AFTER ACTION: Barf forward
(a b) c
