janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__barf_forward_empties_a_list.snap
---
source: src/editing/paredit/tests.rs
expression: (|a)
---
----- BEFORE ACTION
(a)
 ↑

----- AFTER ACTION: Barf forward
() a
