janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__raise_a_list.snap
---
source: src/editing/paredit/tests.rs
expression: (foo |(bar x))
---
----- BEFORE ACTION
(foo (bar x))
     ↑

----- AFTER ACTION: Raise
(bar x)
