janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__slurp_backward_into_an_array.snap
---
source: src/editing/paredit/tests.rs
expression: "x @[|a]"
---
----- BEFORE ACTION
x @[a]
    ↑

----- AFTER ACTION: Slurp backward
@[x a]
