janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__slurp_backward_into_an_empty_list.snap
---
source: src/editing/paredit/tests.rs
expression: a (|)
---
----- BEFORE ACTION
a ()
   ↑

----- AFTER ACTION: Slurp backward
(a)
