janet-lsp-plus/src/editing/paredit/snapshots/janet_lsp_plus__editing__paredit__tests__slurp_forward_at_the_closing_delimiter.snap
---
source: src/editing/paredit/tests.rs
expression: (a b|)c
---
----- BEFORE ACTION
(a b)c
    ↑

----- AFTER ACTION: Slurp forward
(a b c)
